# pgixml-adapter

./: CMakeLists.txt  README.md
metaconfigure/: description.json
